<resources>
    <string name="app_name">MPRP</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Enter your registered email id</string>
    <string name="password_hint">Enter your password </string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sendpwd">Send Password</string>
    <string name="email_address">Please enter your registered email address</string>
    <string name="next">Next</string>
    <string name="logo">MPRP</string>

    <!--settings strings-->
    <string name="welcome_text">Welcome to the MPRP app.</string>
    <string name="serversettings">Welcome to the MPRP App. This app helps you request, issue and transform items. Please set the IP address of your server address below. This will be required only once at the time of installation. Click Next to continue.</string>
    <string name="provideserveraddress">Please enter your server address here</string>
    <string name="exampleserveraddress">Example: 192.168.1.4:8000 or examplesite.com:port number</string>
    <string name="progress_dialog_message">Please Wait....</string>
    <string name="login_failed">Could not login. Please re-enter correct username and password</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout_str">Logout</string>
    <string name="issue_items">Issue Items</string>
    <string name="transform_items">Transform Items</string>
    <string name="request_items">Request Items</string>
    <string name="select_task">Select Task</string>
    <string name="others_str">Exit</string>
    <string name="exit_str">Exit</string>
    <string name="clue_select_task_str">Please select your task from the menu on the top left corner or click on one of the image buttons below to choose your task.</string>
    <string name="pick_date">Pick a date</string>
    <string name="required_by_date_str">Required by date:</string>
    <string name="required_qnty_str">Required Qnty</string>
    <string name="available_qnty_str">Available Qnty</string>
    <string name="uom_str">UOM</string>
    <string name="required_items_str">Request Items</string>
    <string name="save_str">SAVE</string>
    <string name="submit_str">SUBMIT</string>
    <string name="error_string">Error</string>
    <string name="ok_str">OK</string>
    <string name="success_string">Success</string>
    <string name="cancel_str">Cancel</string>
    <string name="no_str">No</string>
    <string name="requested_items_title_str">Requested Items</string>
    <string name="slno_str">Sl No</string>
    <string name="select_task_request_items_clue">Request items</string>
    <string name="select_task_transform_clue">Transform items</string>
    <string name="select_task_issue_items_clue">Issue items</string>
    <string name="requested_items_not_found_on_server_str">Could not find the details of the items listed in the Items Table in the CD of Erpnext</string>
    <string name="transform_items_select_label">Transform Items</string>
    <string name="items_made_label">Item</string>
    <string name="items_consumed_label">Items Consumed</string>
    <string name="txfm_item_code_label">Item Code:</string>
    <string name="txfm_item_stock_uom_label">UOM</string>
    <string name="txfm_item_quantity_label">Reqd qty</string>
    <string name="txfm_item_batchorserial_label">Batch/Serial Nos:</string>
    <string name="select_item_to_be_transformed_str">Add row</string>
    <string name="choose_item_to_be_transformed_str">Choose item to be transformed by clicking on Add Row button</string>
    <string name="add_transformed_item_row">Please choose the item to be transformed from the drop down list below</string>
    <string name="no_more__transformed_items_to_be_selected">There are no more items that can be transformed</string>
    <string name="finished_goods_str">Finished Product</string>
    <string name="raw_material_string">Raw Material</string>
    <string name="items_made_stock_quantity_per_item">Qty per BOM</string>
    <string name="quantity_consumed_per_BOM">Qty</string>
    <string name="request_items_hint_str">Choose items to be requested below. Select an appropriate transaction date from the Pick Date button.</string>
    <string name="no_more__request_items_to_be_selected">There are no more items that can be requested</string>
    <string name="add_request_item_row">Please choose the item to be requested from the drop down list below</string>
    <string name="batch_str">Batch Nos</string>
    <string name="serial_nos_str">Serial Nos</string>
    <string name="batch_qty_str">Enter quantity required</string>
    <string name="request_batch_qty_str">Enter quantities you are requesting from  this batch below</string>
    <string name="pick_batch_str">Enter the batch number here</string>
    <string name="pick_exp_date_str">Set the batch expiry date here</string>
    <string name="set_batch_number_for_item_made_str">Set Batch Number and Expiry Date</string>
    <string name="set_batch_message_str">Set the batch number and expiry date for the Item </string>
    <string name="empty_str" />
    <string name="dummy_str">Dummy</string>
    <string name="all_correct_str">All selections are appropriate and sufficient. Please click on submit to proceed</string>
    <string name="set_batch_and_sln_str">Set Batch and/or Sl No</string>
    <string name="use_BOM_values_str">Use BOM</string>
    <string name="select_str">Select</string>
    <string name="date_format_str">yyyy-mm-dd</string>
    <string name="choose_issue_type_str">Please choose Issue type</string>
    <string name="issue_materials_already_in_stock_str">Issue Material Already In Stock</string>
    <string name="make_and_issue_materials_str">Make and Issue Material</string>
    <string name="choose_item_to_be_issued_str">Choose the item to be issued.</string>
    <string name="choose_item_to_be_issued_from_drop_down_str">Please choose the item to be issued from the drop down</string>
    <string name="issue_qnty_str">Qty to be issued</string>
    <string name="issue_materials_not_already_in_stock_str">Materials to be issued not found on the server.</string>
    <string name="issue_item_quantity_label">Qty to be issued</string>
    <string name="select_WH_str">Select DS WH</string>
    <string name="select_batch_and_sln_str">Batch/Serial No</string>
    <string name="dswhlistisnull_str">Error: The downstream warehouse list for this item is not set on ERPNext. Please choose another item or please set the list on ERPNext and retry.</string>


</resources>
