<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            >

            <TextView
                android:id="@+id/consumed_item_name_finished_goods"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.75"
                android:hint="@string/items_consumed_label" />

           <!-- <TextView
                android:id="@+id/consumed_item_finished_goods_qty_used_per_unit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.45"
                android:text="@string/quantity_consumed_per_BOM" />-->

            <TextView
                android:id="@+id/item_consumed_finished_goods_stock_uom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.35"
                android:hint="@string/txfm_item_stock_uom_label"

                />

            <EditText
                android:id="@+id/item_consumed_finished_goods_qnty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:hint="@string/txfm_item_quantity_label"
                android:layout_weight="0.65"
                android:imeOptions="actionDone"
                />
            <ImageView
                android:id="@+id/item_consumed_finished_goods_set_batch_and_sln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>